fix app after moving things + make history endpoint work
